@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8275: Fix passing of callback arguments with ctypes under Win64.
+  Patch by Stan Mihai.
+
 
 What's New in Python 3.2 Release Candidate 2?
 =============================================
